--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,15 @@
     "noEmit": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
-    "strict": true
-  }
+    "strict": true,
+    "baseUrl": "./",
+    "paths": {
+      "src/*": [
+        "src/*"
+      ],
+    },
+  },
+  "exclude": [
+    "node_modules",
+  ]
 }
