--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
+    "axios": "^0.21.1",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
@@ -39,6 +40,7 @@
     "jest-mock-extended": "^1.0.13",
     "react-native-typescript-transformer": "^1.2.13",
     "react-test-renderer": "^17.0.1",
+    "redux-saga-test-plan": "^4.0.1",
     "typescript": "~4.0.0"
   },
   "private": true,
